# news_crawler

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
infra/ci/: github-actions.yaml
infra/k8s/: deployment.yaml
infra/systemd/: secbot.service
src/secbot/: config.py  main.py  scheduler.py
src/secbot/defense/: ipset.py  suricata.py  suricata_hash.py  suricata_url.py
src/secbot/fetchers/: advisory.py  asec.py  news.py
src/secbot/mailer/: gmail.py  naverMail.py
src/secbot/parsers/: ioc.py
src/secbot/utils/: logger.py  retry.py
src/tests/: conftest.py  test_defense.py  test_fetchers.py
